@@ -1,6 +1,8 @@
 Changelog for Yii User Management Module (Yum) 
 
 New in 0.8:
+- Added avatar upload possibility for users
+- Added 'visitors' to profiles (who visited whom when, and display it)
 - Added support for send emails out of SwiftMailer (docs/swiftMailer.txt)
 - Added DROPDOWNLIST field type to profile fields. see docs/dropdownlist_in_registration_form.txt for information on how to use this (thyseus)
 - Added possibility to make roles selectable on registration (thyseus)
